crates/test-generator/tests/snapshots/ts/test_generated_object.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
{ prop11: value16, prop2: value21 }

AST:
(program
  (expression_statement
    (object
      (pair
        key: (property_identifier "prop11")
        value: (identifier "value16")
      )
      (pair
        key: (property_identifier "prop2")
        value: (identifier "value21")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:11 to 1:18 }, name: "value16", kind: Identifier, context: None },
        Usage { position: { 1:27 to 1:34 }, name: "value21", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
