crates/test-generator/tests/snapshots/ts/test_generated_object1.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
{ prop13: value110, prop22: value210 }

AST:
(program
  (expression_statement
    (object
      (pair
        key: (property_identifier "prop13")
        value: (identifier "value110")
      )
      (pair
        key: (property_identifier "prop22")
        value: (identifier "value210")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:11 to 1:19 }, name: "value110", kind: Identifier, context: None },
        Usage { position: { 1:29 to 1:37 }, name: "value210", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
