crates/test-generator/tests/snapshots/ts/test_generated_object_assignment_pattern.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const { prop3 = defaultVal } = obj2;

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (object_pattern
        (object_assignment_pattern
          left: (shorthand_property_identifier_pattern "prop3")
          right: (identifier "defaultVal")
        )
      )
      value: (identifier "obj2")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "prop3",
            position: Position {
                start_line: 1,
                start_column: 9,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "defaultVal",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 27,
            },
            context: None,
        },
        Usage {
            name: "obj2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 32,
                end_line: 1,
                end_column: 36,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
