crates/test-generator/tests/snapshots/ts/test_generated_object_type.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const value17: { prop4: number } = { prop4: 42 };

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "value17")
      type: (type_annotation
        (object_type
          (property_signature
            name: (property_identifier "prop4")
            type: (type_annotation
              (predefined_type "number")
            )
          )
        )
      )
      value: (object
        (pair
          key: (property_identifier "prop4")
          value: (number "42")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:14 }, name: "value17", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:18 to 1:23 }, name: "prop4", definition_type: PropertyDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:18 to 1:23 }, name: "prop4", kind: FieldExpression, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
