crates/test-generator/tests/snapshots/ts/test_generated_parenthesized_type.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const value20: (string | number) = 'test';

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "value20")
      type: (type_annotation
        (parenthesized_type
          (union_type
            (predefined_type "string")
            (predefined_type "number")
          )
        )
      )
      value: (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value20",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
